fixed icon wrap

--- a/style.css
+++ b/style.css
@@ -278,15 +278,17 @@ p {
 
 
 ul.icons {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
   margin-right: auto;
   margin-left: auto;
-  max-width: 460px;
+  max-width: 800px;
   font-weight: 800;
   font-family: Arimo, sans-serif;
   font-size:11pt;
     list-style-type: none;
     padding: 0;
-    overflow: hidden;
     /*border: 1px solid rgb(120, 142, 181);*/
       font-style: italic;
         text-shadow: none;
